Fix. loss bottom gap after unfold details

--- a/src/Thin-Style.less
+++ b/src/Thin-Style.less
@@ -829,7 +829,7 @@ body[for="html-export"] {
     }
 
     details[open] {
-        margin-bottom: 0px;
+        margin-bottom: 60px;
         border: 4px solid transparent;
         border-radius: 16px;
         background-clip: padding-box, border-box;
